finish recommend collection view.

--- a/LiveCast/ZCYLiveItemCell.xib
+++ b/LiveCast/ZCYLiveItemCell.xib
@@ -48,11 +48,11 @@
                         <rect key="frame" x="120" y="0.0" width="60" height="18"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="viewerIcon" translatesAutoresizingMaskIntoConstraints="NO" id="9kW-v5-hwc">
-                                <rect key="frame" x="18" y="5" width="10" height="8"/>
+                                <rect key="frame" x="15" y="5" width="10" height="8"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="4733" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dSQ-Ni-bxv">
-                                <rect key="frame" x="33" y="4.5" width="21" height="9"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="99.9万" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dSQ-Ni-bxv">
+                                <rect key="frame" x="29" y="4.5" width="27" height="9"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
