--- a/LiveCast/ZCYLiveItemCell.xib
+++ b/LiveCast/ZCYLiveItemCell.xib
@@ -38,7 +38,7 @@
                             <constraint firstAttribute="width" constant="12" id="zhl-wx-edq"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="来跟我念：学习使我快乐！" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6UE-P4-Id7">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="来跟我念：学习使我快乐！" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6UE-P4-Id7">
                         <rect key="frame" x="0.0" y="115" width="180" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
